--- a/requirements_triton.txt
+++ b/requirements_triton.txt
@@ -20,11 +20,10 @@ matplotlib==3.7.5
 mccabe==0.7.0
 mpi4py==3.1.6
 mpmath==1.3.0
-mscclpp @ file:///home/shreyasingh/msr-project/mscclpp
+mscclpp @ file:///uufs/chpc.utah.edu/common/home/u1419864/vast//msr-project/mscclpp
 netifaces==0.11.0
 networkx==3.1
 ninja==1.11.1.1
-numpy==1.24.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -48,7 +47,6 @@ pyparsing==3.1.2
 pytest==8.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-scipy==1.10.1
 six==1.16.0
 sympy==1.12.1
 tabulate==0.9.0
